--- a/Pixel_Calamity/Pixel_Calamity.vcxproj.filters
+++ b/Pixel_Calamity/Pixel_Calamity.vcxproj.filters
@@ -1,22 +1,63 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Core">
+      <UniqueIdentifier>{37c1d56e-2d86-4588-b001-75a02b7f99e3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Core\Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="Core\Header Files">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
+    </Filter>
+    <Filter Include="Framework">
+      <UniqueIdentifier>{433b55fc-9d04-433d-b129-ba1956ddda9b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Systems">
+      <UniqueIdentifier>{6c079ad5-6578-4bf7-badd-89d7ab0efb4f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameLogic">
+      <UniqueIdentifier>{93a36ab0-0869-4452-82f1-acf50366cb86}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Systems\Graphics">
+      <UniqueIdentifier>{573ae0db-61cb-48cc-9b4d-ce893fd7fcdd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Systems\Graphics\Header Files">
+      <UniqueIdentifier>{a11b6c97-d040-478b-a347-1c7dfc75ef9a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Systems\Graphics\Source Files">
+      <UniqueIdentifier>{4fa37e66-2aa2-4ddc-8f3e-938b84c200da}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Framework\Header Files">
+      <UniqueIdentifier>{dc55e374-a640-4e87-96ba-ac59a3f4026a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Framework\Source Files">
+      <UniqueIdentifier>{10367d07-d917-4aca-b1a2-d791ff357518}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Core\main.cpp">
+      <Filter>Core\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Systems\Graphics\Graphics.cpp">
+      <Filter>Systems\Graphics\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Framework\STDSingleton.cpp">
+      <Filter>Framework\Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Systems\Graphics\Graphics.h">
+      <Filter>Systems\Graphics\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Framework\STDSingleton.h">
+      <Filter>Framework\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
